// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`long.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]: this is a long long long long long long long long long long long long long paragraph.
          this is a long long long long long long long long long long long long long paragraph.

=====================================output=====================================
[^hello]:
  this is a long long long long long long long long long long long long long
  paragraph.

[^world]:
  this is a long long long long long long long long long long long long long
  paragraph. this is a long long long long long long long long long long long
  long long paragraph.

================================================================================
`;

exports[`long.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]: this is a long long long long long long long long long long long long long paragraph.
          this is a long long long long long long long long long long long long long paragraph.

=====================================output=====================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]: this is a long long long long long long long long long long long long long paragraph. this is a long long long long long long long long long long long long long paragraph.

================================================================================
`;

exports[`long.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]: this is a long long long long long long long long long long long long long paragraph.
          this is a long long long long long long long long long long long long long paragraph.

=====================================output=====================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]:
  this is a long long long long long long long long long long long long long paragraph.
  this is a long long long long long long long long long long long long long paragraph.

================================================================================
`;

exports[`multiline.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[^fn1]:

    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]: Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

=====================================output=====================================
[^fn1]:
  > \`\`\`rs
  > fn main() {
  >     println!("this is some Rust!");
  > }
  > \`\`\`

[^fn2]: Here is a footnote which includes code.

  \`\`\`rs
  fn main() {
      println!("this is some Rust!");
  }
  \`\`\`

[^fn2]:
  Here is a footnote which includes code. Here is a footnote which includes
  code. Here is a footnote which includes code.

  \`\`\`rs
  fn main() {
      println!("this is some Rust!");
  }
  \`\`\`

================================================================================
`;

exports[`multiline.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[^fn1]:

    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]: Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

=====================================output=====================================
[^fn1]:
  > \`\`\`rs
  > fn main() {
  >     println!("this is some Rust!");
  > }
  > \`\`\`

[^fn2]: Here is a footnote which includes code.

  \`\`\`rs
  fn main() {
      println!("this is some Rust!");
  }
  \`\`\`

[^fn2]:
  Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

  \`\`\`rs
  fn main() {
      println!("this is some Rust!");
  }
  \`\`\`

================================================================================
`;

exports[`multiline.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
[^fn1]:

    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]: Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

=====================================output=====================================
[^fn1]:
  > \`\`\`rs
  > fn main() {
  >     println!("this is some Rust!");
  > }
  > \`\`\`

[^fn2]: Here is a footnote which includes code.

  \`\`\`rs
  fn main() {
      println!("this is some Rust!");
  }
  \`\`\`

[^fn2]:
  Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

  \`\`\`rs
  fn main() {
      println!("this is some Rust!");
  }
  \`\`\`

================================================================================
`;

exports[`sibling.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: a
[^a]: a

=====================================output=====================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]:
  > 123\\
  > 456

[^a]: a
[^a]:
  > 123\\
  > 456

[^a]: a
[^a]: a
[^a]: a

================================================================================
`;

exports[`sibling.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: a
[^a]: a

=====================================output=====================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]:
  > 123\\
  > 456

[^a]: a
[^a]:
  > 123\\
  > 456

[^a]: a
[^a]: a
[^a]: a

================================================================================
`;

exports[`sibling.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: a
[^a]: a

=====================================output=====================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]:
  > 123\\
  > 456

[^a]: a
[^a]:
  > 123\\
  > 456

[^a]: a
[^a]: a
[^a]: a

================================================================================
`;

exports[`simple.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[^hello]: world

=====================================output=====================================
[^hello]: world

================================================================================
`;

exports[`simple.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[^hello]: world

=====================================output=====================================
[^hello]: world

================================================================================
`;

exports[`simple.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
[^hello]: world

=====================================output=====================================
[^hello]: world

================================================================================
`;
